clusters/home/apps/storage/minio/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: minio
spec:
  type: ExternalName
  externalName: 172.31.0.8
  ports:
  - name: api
    port: 9000
  - name: web
    port: 9002
